<resources>
    <string name="app_name">Myrelatif</string>
    <string name="welcome_to_app">Welcome to app</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="remember">Remember</string>
    <string name="membuat_akun_di_sini">Membuat akun di sini</string>
    <string name="klik_disini">Klik disini</string>
    <string name="tidak_memiliki_akun">tidak memiliki akun,</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="emailR">Email</string>
    <string name="emailR2">Email</string>
    <string name="hallo_egi_yudhistira">Hallo Egi Yudhistira</string>
    <string name="todo">TODO</string>
    <string name="halloegiyudhistira">Hallo Egi Yudhistira</string>
    <string name="todo2">TODO</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="register1">register</string>
    <string name="logo_google">logo_google</string>
    <string name="logo_facebook">Logo facebook</string>
    <string name="logo_instagram">Logo instagram</string>
    <string name="or">--------------OR---------------</string>
    <string name="login_with_google">login with google</string>
    <string name="start_here">start here</string>
    <string name="start_here1">start here</string>
    <string name="hallo">Hallo</string>
    <string name="egi_yudhistira">Egi Yudhistira</string>
    <string name="develop">Develop</string>
    <string name="mobile">Mobile</string>
    <string name="ask">ask</string>
    <string name="todo1">TODO1</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="pick_date">Pick Date</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="discover">Discover</string>
    <string name="setting">setting</string>
</resources>