<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ask">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/meta"
                    app:civ_border_color="@color/CornflowerBlue"
                    app:civ_border_width="5dp"
                    tools:ignore="MissingConstraints">
                </de.hdodenhof.circleimageview.CircleImageView>
            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/logo"
            android:layout_marginTop="-29dp">

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:autofillHints=""
                android:hint="@string/nama"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/nama"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:hint="@string/alamat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                tools:ignore="TextFields" />


            <EditText
                android:id="@+id/kolomdate"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/alamat"
                android:layout_centerInParent="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="left"
                android:padding="10dp"
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText,RtlHardcoded,TextFields,TouchTargetSizeCheck"
                android:autofillHints="" />

            <Button
                android:id="@+id/pickdate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/kolomdate"
                android:layout_marginStart="270dp"
                android:background="@drawable/kotak"
                android:text="@string/pick_date"
                android:textAllCaps="false" />

            <RadioGroup
                android:id="@+id/groupradio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pickdate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/jenis_kelamin"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radia_id1"
                    android:layout_width="fill_parent"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/laki_laki"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radia_id2"
                    android:layout_width="fill_parent"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"
                    android:textSize="20sp" />

            </RadioGroup>

            <Spinner
                android:id="@+id/pilihnegara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupradio"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                tools:ignore="TouchTargetSizeCheck" />

            <RatingBar
                android:id="@+id/rBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pilihnegara"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:numStars="4"
                android:stepSize="0.5"
                android:theme="@style/Widget.AppCompat.RatingBar" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rBar"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/CornflowerBlue"
                android:text="@string/submit_rating" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>