<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".registrastion">

    <RelativeLayout
        android:id="@+id/kolomgambar"
        android:layout_width="match_parent"
        android:layout_height="400dp">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/kolom1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/kolomgambar"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:hint="@string/first_name"
                android:importantForAutofill="auto"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="15sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:layout_marginEnd="50dp"
                android:autofillHints=""
                android:hint="@string/last_name"
                android:importantForAutofill="auto"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="15sp"
                tools:ignore="TextFields,VisualLintTextFieldSize,VisualLintBounds" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/kolom1">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:hint="@string/emailR"
            android:importantForAutofill="auto"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp"
            tools:ignore="TextFields,VisualLintTextFieldSize,DuplicateClickableBoundsCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_below="@+id/email"
            android:hint="@string/password"
            android:importantForAutofill="auto"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp"
            tools:ignore="InvalidId,TextFields,VisualLintTextFieldSize"
            android:autofillHints="" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_below="@id/password"
            android:layout_centerInParent="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape1"
            android:layout_marginEnd="100dp"
            android:contentDescription="@android:string/ok"
            android:text="@string/Register"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/login"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_below="@+id/register"
            android:layout_centerInParent="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:contentDescription="@android:string/ok"
            android:text="Login"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />



    </RelativeLayout>


</RelativeLayout>

