<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/boxname"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/cyber"
                android:padding="10sp"
                android:text="@string/hallo"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/idname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:onClick="idnameOnclik"
                android:fontFamily="@font/cyber"
                android:text="@string/egi_yudhistira"
                android:textSize="20sp" />


        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileimage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/boxname"
            android:src="@drawable/profilegi1"
            app:civ_border_color="@color/CornflowerBlue"
            app:civ_border_width="2dp"
            tools:ignore="SpeakableTextPresentCheck">
        </de.hdodenhof.circleimageview.CircleImageView>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/pencarian"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/boxname"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape">

        </androidx.appcompat.widget.SearchView>

        <LinearLayout
            android:id="@+id/menuview"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@id/pencarian">

            <ImageButton
                android:id="@+id/menucyber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:onClick="menucyberOnClik"
                android:background="@drawable/shape"
                android:contentDescription="TODO"
                android:src="@drawable/otak"
                tools:ignore="ContentDescription,HardcodedText,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/menuapp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:contentDescription="TODO"
                android:src="@drawable/mobile"
                tools:ignore="ContentDescription,HardcodedText,SpeakableTextPresentCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/menu3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:contentDescription="TODO"
                android:src="@drawable/ask"
                tools:ignore="ContentDescription,HardcodedText,SpeakableTextPresentCheck,ImageContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menuname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/menuview">

            <TextView
                android:id="@+id/Flight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/develop"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Hotel"
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mobile"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
            <TextView
                android:id="@+id/Destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ask"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/discover"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/menuname">
            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="22dp"
                android:text="@string/discover"
                android:textStyle="bold"
                android:textSize="40sp"/>
            <ImageButton
                android:id="@+id/setting"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/setting2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/discover"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:onClick="iklanOnClick"
                android:backgroundTint="@color/CornflowerBlue"
                android:src="@drawable/iklan1"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/CornflowerBlue"
                android:contentDescription="TODO"
                android:onClick="iklanOnClick"
                android:padding="10dp"
                android:src="@drawable/iklan2"
                tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"></ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/CornflowerBlue"
                android:contentDescription="TODO"
                android:onClick="iklanOnClick"
                android:src="@drawable/iklan1"
                tools:ignore="ContentDescription,HardcodedText" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:onClick="iklanOnClick"
                android:padding="10dp"
                android:backgroundTint="@color/CornflowerBlue"
                android:src="@drawable/iklan2"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:onClick="iklanOnClick"
                android:backgroundTint="@color/CornflowerBlue"
                android:src="@drawable/iklan1"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/shape"
                android:onClick="iklanOnClick"
                android:padding="10dp"
                android:backgroundTint="@color/CornflowerBlue"
                android:src="@drawable/iklan2"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText">
            </ImageView>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>